fixed some bugs

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,4 +14,4 @@ jwt.secret=TJk_wyOF9F5xQYh6UV-DzLfGV9xGQkDeTCfugc0ykzcCDMmpIyBY1Drxe87yrDdjdc3BJ
 jwt.expire_time=24 * 60 * 60 * 1000
 logging.level.org.springframework.security=DEBUG
 
-frontend.allowed-origin=http://3.147.80.131
+frontend.allowed-origin=https://tubular-hotteok-dbb369.netlify.app/
