fix the bug of productCard

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ spring.application.name=personalized_advertisement_system
 server.port=8090
 spring.datasource.url=jdbc:mysql://localhost/personalized_advertisement_system?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=@Zl954954
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA Configuration
 spring.jpa.show-sql=true
@@ -14,4 +14,4 @@ jwt.secret=TJk_wyOF9F5xQYh6UV-DzLfGV9xGQkDeTCfugc0ykzcCDMmpIyBY1Drxe87yrDdjdc3BJ
 jwt.expire_time=24 * 60 * 60 * 1000
 logging.level.org.springframework.security=DEBUG
 
-frontend.allowed-origin=https://tubular-hotteok-dbb369.netlify.app/
+frontend.allowed-origin=https://3.17.176.37
