--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.application.name=personalized_advertisement_system
 server.port=8090
-spring.datasource.url=jdbc:mysql://localhost/personalized_advertisement_system?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost/personalized_advertisement_system?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=@Zl954954
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
